# cli2

./: README.md  pyproject.toml
src/taskflow/: __init__.py  app.py  cli.py  display.py  executor.py
