[tool.poetry]
name = "taskflow"
version = "1.0.0"
description = "A beautiful full-screen CLI task runner with dual progress tracking"
authors = ["Developer <dev@example.com>"]
readme = "README.md"
packages = [{include = "taskflow", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
rich = "^14.0.0"
click = "^8.1.7"

[tool.poetry.scripts]
taskflow = "taskflow.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
